Revert "Prevent white-space from wrapping in report table headers."
This reverts commit fb848f565c95564694e78a40bdae8eed75c1d8d6.

--- a/static/css/report.css
+++ b/static/css/report.css
@@ -182,12 +182,12 @@ a[title="JavaScript charts"] {
     visibility: hidden;
 }
 
-.observation-previous-previous-year,
-.observation-previous-year,
-.observation-sample-year,
-.observation-difference,
-.observation-difference-total,
-.observation-extra {
+td.observation-previous-previous-year,
+td.observation-previous-year,
+td.observation-sample-year,
+td.observation-difference,
+td.observation-difference-total,
+td.observation-extra {
     white-space: nowrap;
 }
 
